--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
         <title>WebShare</title>
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
-    <body>
+    <body class="darkTheme">
+        <script src="js/style.js"></script>
+        <script src="js/components.js"></script>
+        <script src="js/home.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
